--- a/app/apps/context/templates/benc/melding_detail_acties.html
+++ b/app/apps/context/templates/benc/melding_detail_acties.html
@@ -1,42 +1,86 @@
 <div class="container__actions">
     <p>
         {% if perms.authorisatie.taak_aanmaken and taaktypes and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
-        <button type="button" class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{%else%}action{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'taak_starten' melding.uuid %}"><span>Start taak</span></button>
+            <button type="button"
+                    class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{% else %}action{% endif %}"
+                    data-action="detail#openModal"
+                    data-detail-action-param="{% url 'taak_starten' melding.uuid %}">
+                <span>Start taak</span>
+            </button>
         {% endif %}
         {% if perms.authorisatie.melding_afhandelen and not melding.afgesloten_op %}
-        <button type="button" class="btn btn-{% if melding.status.naam == 'controle' %}action{%else%}tertiary{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}"><span>Melding afhandelen</span></button>
+            <button type="button"
+                    class="btn btn-{% if melding.status.naam == 'controle' %}action{% else %}tertiary{% endif %}"
+                    data-action="detail#openModal"
+                    data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}">
+                <span>Melding afhandelen</span>
+            </button>
+        {% endif %}
+        {% comment %} and (melding.status.naam == "afgehandeld" or melding.status.naam != "geannuleerd") {% endcomment %}
+        {% if perms.authorisatie.melding_heropenen and melding.afgesloten_op %}
+            <button type="button"
+                    class="btn btn-tertiary"
+                    data-action="detail#openModal"
+                    data-detail-action-param="{% url 'melding_heropenen' melding.uuid %}">
+                <span>Melding heropenen</span>
+            </button>
         {% endif %}
     </p>
     <ul class="list-links">
         {% if open_taakopdrachten %}
-        {% if perms.authorisatie.taak_afronden %}
-        <li>
-            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_afronden' melding.uuid %}">
-                <svg width="18" height="18" viewBox="0 0 55 43" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M49.6439 0.0427246L23.0468 33.2845L4.96397 11.2844L0.317383 15.0798L23.0965 42.8261L54.3288 3.79295L49.6439 0.0427246Z" fill="#00811F"/>
-                </svg>Taak afronden</button>
-        </li>
-        {% endif %}
-        {% if perms.authorisatie.taak_annuleren %}
-        <li>
-            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_annuleren' melding.uuid %}">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F"/>
-                </svg>Taak annuleren</button>
-        </li>
-        {% endif %}
+            {% if perms.authorisatie.taak_afronden %}
+                <li>
+                    <button type="button"
+                            class="btn btn-icon btn-textlink"
+                            data-action="detail#openModal"
+                            data-detail-action-param="{% url 'taak_afronden' melding.uuid %}">
+                        <svg width="18"
+                             height="18"
+                             viewBox="0 0 55 43"
+                             fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path d="M49.6439 0.0427246L23.0468 33.2845L4.96397 11.2844L0.317383 15.0798L23.0965 42.8261L54.3288 3.79295L49.6439 0.0427246Z" fill="#00811F" />
+                        </svg>
+                        Taak afronden
+                    </button>
+                </li>
+            {% endif %}
+            {% if perms.authorisatie.taak_annuleren %}
+                <li>
+                    <button type="button"
+                            class="btn btn-icon btn-textlink"
+                            data-action="detail#openModal"
+                            data-detail-action-param="{% url 'taak_annuleren' melding.uuid %}">
+                        <svg width="18"
+                             height="18"
+                             viewBox="0 0 18 18"
+                             fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F" />
+                        </svg>
+                        Taak annuleren
+                    </button>
+                </li>
+            {% endif %}
         {% endif %}
         {% if not melding.afgesloten_op %}
-        {% if perms.authorisatie.melding_annuleren %}
-        <li>
-            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'melding_annuleren' melding.uuid %}">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F"/>
-                </svg>
-                Melding annuleren
-            </button>
-        </li>
-        {% endif %}
+            {% if perms.authorisatie.melding_annuleren %}
+                <li>
+                    <button type="button"
+                            class="btn btn-icon btn-textlink"
+                            data-action="detail#openModal"
+                            data-detail-action-param="{% url 'melding_annuleren' melding.uuid %}">
+                        <svg width="18"
+                             height="18"
+                             viewBox="0 0 18 18"
+                             fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F" />
+                        </svg>
+                        Melding annuleren
+                    </button>
+                </li>
+            {% endif %}
         {% endif %}
     </ul>
 </div>
