--- a/app/apps/context/templates/standaard/melding_detail_acties.html
+++ b/app/apps/context/templates/standaard/melding_detail_acties.html
@@ -1,77 +1,152 @@
 <div class="container__actions">
     <p>
         {% if perms.authorisatie.taak_aanmaken and taaktypes and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd'  and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
-        <button type="button" class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{%else%}action{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'taak_starten' melding.uuid %}"><span>Start taak</span></button>
+            <button type="button"
+                    class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{% else %}action{% endif %}"
+                    data-action="detail#openModal"
+                    data-detail-action-param="{% url 'taak_starten' melding.uuid %}">
+                <span>Start taak</span>
+            </button>
         {% endif %}
         {% if perms.authorisatie.melding_hervatten and melding.status.naam == "pauze" or melding.status.naam == "wachten_melder" %}
-        <button type="button" class="btn btn-action" data-action="detail#openModal" data-detail-action-param="{% url 'melding_hervatten' melding.uuid %}"><span>Hervatten</span></button>
+            <button type="button"
+                    class="btn btn-action"
+                    data-action="detail#openModal"
+                    data-detail-action-param="{% url 'melding_hervatten' melding.uuid %}">
+                <span>Hervatten</span>
+            </button>
         {% endif %}
         {% if perms.authorisatie.melding_afhandelen and not melding.afgesloten_op %}
-        <button type="button" class="btn btn-{% if melding.status.naam == 'controle' %}action{%else%}tertiary{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}"><span>Melding afhandelen</span></button>
+            <button type="button"
+                    class="btn btn-{% if melding.status.naam == 'controle' %}action{% else %}tertiary{% endif %}"
+                    data-action="detail#openModal"
+                    data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}">
+                <span>Melding afhandelen</span>
+            </button>
+        {% endif %}
+        {% comment %} and (melding.status.naam == "afgehandeld" or melding.status.naam != "geannuleerd") {% endcomment %}
+        {% if perms.authorisatie.melding_heropenen and melding.afgesloten_op %}
+            <button type="button"
+                    class="btn btn-tertiary"
+                    data-action="detail#openModal"
+                    data-detail-action-param="{% url 'melding_heropenen' melding.uuid %}">
+                <span>Melding heropenen</span>
+            </button>
         {% endif %}
     </p>
     <ul class="list-links padding--bottom">
         {% if open_taakopdrachten %}
-        {% if perms.authorisatie.taak_afronden %}
-        <li>
-            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_afronden' melding.uuid %}">
-                <svg width="18" height="18" viewBox="0 0 55 43" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M49.6439 0.0427246L23.0468 33.2845L4.96397 11.2844L0.317383 15.0798L23.0965 42.8261L54.3288 3.79295L49.6439 0.0427246Z" fill="#00811F"/>
-                </svg>Taak afronden</button>
-        </li>
-        {% endif %}
-        {% if perms.authorisatie.taak_annuleren %}
-        <li>
-            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_annuleren' melding.uuid %}">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F"/>
-                </svg>Taak annuleren</button>
-        </li>
-        {% endif %}
+            {% if perms.authorisatie.taak_afronden %}
+                <li>
+                    <button type="button"
+                            class="btn btn-icon btn-textlink"
+                            data-action="detail#openModal"
+                            data-detail-action-param="{% url 'taak_afronden' melding.uuid %}">
+                        <svg width="18"
+                             height="18"
+                             viewBox="0 0 55 43"
+                             fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path d="M49.6439 0.0427246L23.0468 33.2845L4.96397 11.2844L0.317383 15.0798L23.0965 42.8261L54.3288 3.79295L49.6439 0.0427246Z" fill="#00811F" />
+                        </svg>
+                        Taak afronden
+                    </button>
+                </li>
+            {% endif %}
+            {% if perms.authorisatie.taak_annuleren %}
+                <li>
+                    <button type="button"
+                            class="btn btn-icon btn-textlink"
+                            data-action="detail#openModal"
+                            data-detail-action-param="{% url 'taak_annuleren' melding.uuid %}">
+                        <svg width="18"
+                             height="18"
+                             viewBox="0 0 18 18"
+                             fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F" />
+                        </svg>
+                        Taak annuleren
+                    </button>
+                </li>
+            {% endif %}
         {% endif %}
         {% if not melding.afgesloten_op %}
-        {% if perms.authorisatie.melding_annuleren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
-        <li>
-            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'melding_annuleren' melding.uuid %}">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F"/>
-                </svg>Melding annuleren
-            </button>
-        </li>
-        {% endif %}
-        {% if perms.authorisatie.melding_pauzeren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder"%}
-        <li>
-            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'melding_pauzeren' melding.uuid %}">
-                <svg width="18" height="18" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10 11.831V4H12V14H10L4.48389 10.9557L5.48389 9.22364L10 11.831Z" fill="#00811F"/>
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0C17.0751 0 22 4.92487 22 11ZM20 11C20 15.9706 15.9706 20 11 20C6.02944 20 2 15.9706 2 11C2 6.02944 6.02944 2 11 2C15.9706 2 20 6.02944 20 11Z" fill="#00811F"/>
-                </svg>Melding pauzeren
-            </button>
-        </li>
-        {% endif %}
-        {% if perms.authorisatie.locatie_aanpassen %}
-        <li>
-            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'locatie_aanpassen' melding.uuid %}">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.637 0.5L0.5 11.6369V15.8795L4.74263 15.8796L15.8796 4.74264L11.637 0.5ZM13.7583 4.74264L11.637 2.62132L10.046 4.21231L12.1673 6.33363L13.7583 4.74264ZM4.74264 13.7582L11.1066 7.39428L8.98527 5.27296L2.62132 11.6369L4.74264 13.7582Z" fill="#00811F"/>
-                </svg>Locatie aanpassen
-            </button>
-        </li>
-        {% endif %}
+            {% if perms.authorisatie.melding_annuleren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
+                <li>
+                    <button type="button"
+                            class="btn btn-icon btn-textlink"
+                            data-action="detail#openModal"
+                            data-detail-action-param="{% url 'melding_annuleren' melding.uuid %}">
+                        <svg width="18"
+                             height="18"
+                             viewBox="0 0 18 18"
+                             fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F" />
+                        </svg>
+                        Melding annuleren
+                    </button>
+                </li>
+            {% endif %}
+            {% if perms.authorisatie.melding_pauzeren and melding.status.naam != "pauze" and melding.status.naam != "wachten_melder" %}
+                <li>
+                    <button type="button"
+                            class="btn btn-icon btn-textlink"
+                            data-action="detail#openModal"
+                            data-detail-action-param="{% url 'melding_pauzeren' melding.uuid %}">
+                        <svg width="18"
+                             height="18"
+                             viewBox="0 0 22 22"
+                             fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10 11.831V4H12V14H10L4.48389 10.9557L5.48389 9.22364L10 11.831Z" fill="#00811F" />
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0C17.0751 0 22 4.92487 22 11ZM20 11C20 15.9706 15.9706 20 11 20C6.02944 20 2 15.9706 2 11C2 6.02944 6.02944 2 11 2C15.9706 2 20 6.02944 20 11Z" fill="#00811F" />
+                        </svg>
+                        Melding pauzeren
+                    </button>
+                </li>
+            {% endif %}
+            {% if perms.authorisatie.locatie_aanpassen %}
+                <li>
+                    <button type="button"
+                            class="btn btn-icon btn-textlink"
+                            data-action="detail#openModal"
+                            data-detail-action-param="{% url 'locatie_aanpassen' melding.uuid %}">
+                        <svg width="18"
+                             height="18"
+                             viewBox="0 0 18 18"
+                             fill="none"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.637 0.5L0.5 11.6369V15.8795L4.74263 15.8796L15.8796 4.74264L11.637 0.5ZM13.7583 4.74264L11.637 2.62132L10.046 4.21231L12.1673 6.33363L13.7583 4.74264ZM4.74264 13.7582L11.1066 7.39428L8.98527 5.27296L2.62132 11.6369L4.74264 13.7582Z" fill="#00811F" />
+                        </svg>
+                        Locatie aanpassen
+                    </button>
+                </li>
+            {% endif %}
         {% endif %}
     </ul>
-
     {% if perms.authorisatie.melding_spoed_veranderen and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
         <div>
-            <button type="button" class="btn btn-icon btn-checkbox{% if melding.urgentie >= 0.5 %} checked{% endif %}" data-action="detail#openModal" data-detail-action-param="{% url 'melding_spoed_veranderen' melding.uuid %}">
-                <input type="checkbox" class="form-check-input" {% if melding.urgentie >= 0.5 %}checked{% endif %} />
+            <button type="button"
+                    class="btn btn-icon btn-checkbox{% if melding.urgentie >= 0.5 %} checked{% endif %}"
+                    data-action="detail#openModal"
+                    data-detail-action-param="{% url 'melding_spoed_veranderen' melding.uuid %}">
+                <input type="checkbox"
+                       class="form-check-input"
+                       {% if melding.urgentie >= 0.5 %}checked{% endif %} />
                 Met spoed oppakken
-                <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="32"
+                     height="32"
+                     viewBox="0 0 32 32"
+                     fill="none"
+                     xmlns="http://www.w3.org/2000/svg">
                     <g id="BadgeAlert">
-                        <path id="Union" fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21875L26.6516 26.0002L5.34849 26.0002L16.0001 6.21875ZM14.2391 5.27055C14.9943 3.86815 17.0059 3.86815 17.761 5.27055L28.4126 25.052C29.13 26.3845 28.165 28.0002 26.6516 28.0002H5.34849C3.83514 28.0002 2.87007 26.3845 3.58755 25.052L14.2391 5.27055ZM15.0001 12.0002H17.0001V20.0002H15.0001V12.0002ZM15.0001 24.0002V22.0002H17.0001V24.0002H15.0001Z" fill="#404B4F"></path>
+                    <path id="Union" fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21875L26.6516 26.0002L5.34849 26.0002L16.0001 6.21875ZM14.2391 5.27055C14.9943 3.86815 17.0059 3.86815 17.761 5.27055L28.4126 25.052C29.13 26.3845 28.165 28.0002 26.6516 28.0002H5.34849C3.83514 28.0002 2.87007 26.3845 3.58755 25.052L14.2391 5.27055ZM15.0001 12.0002H17.0001V20.0002H15.0001V12.0002ZM15.0001 24.0002V22.0002H17.0001V24.0002H15.0001Z" fill="#404B4F">
+                    </path>
                     </g>
                 </svg>
             </button>
         </div>
-        {% endif %}
+    {% endif %}
 </div>
